--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 
     <H1>Index Page</H1>
 
-    <BLOCKQUOTE>This is the Index page for the linking examples in <a href="Table Of Contents. Happy Looking Guys :)</BLOCKQUOTE>
+    <BLOCKQUOTE>This is the Index page for the linking examples in <a href="toc.html">Table Of Contents</a>. Happy Looking Guys :)</BLOCKQUOTE>
   </BODY>
 </HTML>
