--- a/toc.html
+++ b/toc.html
@@ -5,11 +5,11 @@
 	<body>
 		<h1>Table of Contents</h1>
 
-		<h2><a href="chapter1.html" target="_blank">Chapter 1</a></h2>
+		<h2><a href="chapter1.html" target="_blank">Chapter 1 ~ Medical</a></h2>
 		<ul>
-			<li><b>Topic One</b></li>
-			<li><b>Topic Two</b></li>
-			<li><b>Topic Three</b></li>
+			<li><b><a href="https://medlineplus.gov/" target="_blank"> WebMed</a></b></li>
+			<<li><b><a href="https://www.webmd.com/" target="_blank">MedlinePlus</a></b></li>
+			<li><b><a href="https://www.nih.gov/" target="_blank">National Insititue of Health</a></b></li>
 		</ul>
 		<h2><a href="chapter2.html" target="_blank">Chapter 2</a></h2>
 		<ul>
