--- a/toc.html
+++ b/toc.html
@@ -7,9 +7,9 @@
 
 		<h2><a href="chapter1.html" target="_blank">Chapter 1 ~ Medical</a></h2>
 		<ul>
-			<li><b><a href="https://medlineplus.gov/" target="_blank"> WebMed</a></b></li>
-			<<li><b><a href="https://www.webmd.com/" target="_blank">MedlinePlus</a></b></li>
-			<li><b><a href="https://www.nih.gov/" target="_blank">National Insititue of Health</a></b></li>
+			<li><a href="https://medlineplus.gov/" target="_blank"> WebMed</a></li>
+			<li><a href="https://www.webmd.com/" target="_blank">MedlinePlus</a></li>
+			<li><a href="https://www.nih.gov/" target="_blank">National Insititue of Health</a></li>
 		</ul>
 		<h2><a href="chapter2.html" target="_blank">Chapter 2</a></h2>
 		<ul>
