--- a/toc.html
+++ b/toc.html
@@ -11,17 +11,17 @@
 			<li><a href="https://www.webmd.com/" target="_blank">MedlinePlus</a></li>
 			<li><a href="https://www.nih.gov/" target="_blank">National Insititue of Health</a></li>
 		</ul>
-		<h2><a href="chapter2.html" target="_blank">Chapter 2</a></h2>
+		<h2><a href="chapter2.html" target="_blank">Chapter 2 ~ Dictionaries</a></h2>
 		<ul>
-			<li><b>Topic One</b></li>
-			<li><b>Topic Two</b></li>
-			<li><b>Topic Three</b></li>
+			<li><a href="https://www.dictionary.com/" target="_blank">Dictonary.com</a></li>
+			<li><a href="https://www.merriam-webster.com/" target="_blank">Merriam Webster</a></li>
+			<li><a href="https://www.oed.com/?tl=true" target="_blank">Oxford Dictonary</a></li>
 		</ul>
-		<h2><a href='chapter3.html' target="_blank">Chapter 3</a></h2>
+		<h2><a href='chapter3.html' target="_blank">Chapter 3 ~ Amusement Parks</a></h2>
 		<ul>
-			<li><b>Topic One</b></li>
-			<li><b>Topic Two</b></li>
-			<li><b>Topic Three</b></li>
+			<li><a href="https://lunaparknyc.com/" target="_blank">Luna Park at Coney Island</a></li>
+			<li><a href="https://www.sixflags.com/greatadventure/" target="_blank">Six Flags Great Adventure</a></li>
+			<li><a href="https://www.cedarpoint.com/" target="_blank">Cedar Point</a></li>
 		</ul>
 	</body>
 </html>
