--- a/toc.html
+++ b/toc.html
@@ -23,5 +23,7 @@
 			<li><a href="https://www.sixflags.com/greatadventure/" target="_blank">Six Flags Great Adventure</a></li>
 			<li><a href="https://www.cedarpoint.com/" target="_blank">Cedar Point</a></li>
 		</ul>
+		<br>
+		<b><a href="toc.html">Go Back to Home Page</a></b>
 	</body>
 </html>
